Fix bugs and add new functionality.
- Fixed sorting for -t flag (in case when modification time is equal
  there were no sorting by name).

- Revise main to provide handling of files and options provided in
  input similar to system ls like manner.

- Implement optuput to the table when no flags provided or multi-
  column output requested.
  Handle both sortings: down (-C or no flag) and across (-x)
  the columns.

- Start implementing detailed output for -l option.
  There are no ACL and xattr handling yet. Time and date require
  some formatting compared to system ls command.

- Add new function to libft (ft_numlen) for calculating number of
  digits in a number.

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mpetruno <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/05/25 18:27:37 by mpetruno          #+#    #+#              #
-#    Updated: 2018/10/31 21:13:56 by mpetruno         ###   ########.fr        #
+#    Updated: 2018/11/09 11:03:13 by mpetruno         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -33,6 +33,7 @@ FUNC_LIST = memset \
 			memchr \
 			memcmp \
 			strlen \
+			numlen \
 			strdup \
 			strcpy \
 			strncpy \
